--- a/project/res/layout/section_hotel_summary_tablet.xml
+++ b/project/res/layout/section_hotel_summary_tablet.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.section.HotelSummarySection xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:mobiata="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/tablet_tripbucket_card_height"
     android:background="@color/tablet_white_pane_bg"
@@ -8,8 +8,8 @@
     android:paddingLeft="12dp"
     android:paddingRight="12dp"
     android:paddingTop="6dp"
-    mobiata:priceTextColor="?attr/hotelPriceStandardColor"
-    mobiata:salePriceTextColor="?attr/hotelPriceSaleColor" >
+    app:priceTextColor="?attr/hotelPriceStandardColor"
+    app:salePriceTextColor="?attr/hotelPriceSaleColor">
 
     <!-- TODO: revisit the background view here. -->
 
@@ -17,20 +17,20 @@
         android:id="@+id/hotel_background_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="12dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/name_text_view"
@@ -40,12 +40,12 @@
                 android:singleLine="true"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/tablet_result_row_primary_text_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <LinearLayout
                 android:id="@+id/rating_proximity_container"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/not_rated_text_view"
@@ -57,7 +57,7 @@
                     android:singleLine="true"
                     android:text="@string/not_rated"
                     android:textColor="@color/hotel_cell_secondary_color"
-                    android:visibility="gone" />
+                    android:visibility="gone"/>
 
                 <RatingBar
                     android:id="@+id/user_rating_bar"
@@ -67,7 +67,7 @@
                     android:layout_gravity="center_vertical"
                     android:isIndicator="true"
                     android:numStars="5"
-                    android:stepSize=".5" />
+                    android:stepSize=".5"/>
 
                 <TextView
                     android:id="@+id/proximity_text_view"
@@ -78,14 +78,14 @@
                     android:paddingLeft="2dp"
                     android:singleLine="true"
                     android:textColor="#ffffff"
-                    android:textSize="@dimen/tablet_result_row_secondary_text_size" />
+                    android:textSize="@dimen/tablet_result_row_secondary_text_size"/>
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/strikethrough_price_text_view"
@@ -95,7 +95,7 @@
                 android:includeFontPadding="false"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/hotel_row_strikethrough_price_text_size"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/price_text_view"
@@ -105,7 +105,7 @@
                 android:includeFontPadding="false"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/tablet_result_row_price_size"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -124,7 +124,6 @@
         android:paddingTop="1dp"
         android:text="@string/VIP"
         android:textColor="@android:color/white"
-        android:visibility="gone" />
 
     <!-- TODO: place the urgency message somewhere -->
 
@@ -139,6 +138,7 @@
         android:textColor="@color/hotel_cell_primary_color"
         android:textStyle="bold"
         android:visibility="gone" />
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/sale_text_view"
@@ -155,6 +155,6 @@
         android:paddingTop="1dp"
         android:singleLine="true"
         android:textColor="@android:color/white"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 </com.expedia.bookings.section.HotelSummarySection>
