2605: Tablet hotel map price pins
- Not as bad to render as I thought
- Not final assets (or colors)

--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -193,4 +193,7 @@
     <!-- Tablet Confirmation Action Buttons -->
     <color name="tablet_confirmation_actionbutton_pressed">#20000000</color>
 
+    <!-- Price pins on map -->
+    <color name="map_price_pin_text_color">#ffffff</color>
+
 </resources>
