2605: Fix map padding on hotel selected
The pin wasn't centering very well when the hotel details popped up.

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -283,6 +283,7 @@
     <dimen name="hotels_map_pin_padding">50dp</dimen>
     <dimen name="tablet_search_header_height">44dp</dimen>
     <dimen name="tablet_results_flight_map_padding">40dp</dimen>
+    <dimen name="tablet_results_hotel_map_pin_padding">64dp</dimen>
 
     <!-- Tablet trip bucket dimens -->
     <dimen name="tablet_tripbucket_card_height">148dp</dimen>
