--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -5,6 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/search_actions_container"
+        android:background="#66000000"
+        android:layout_width="wrap_content"
+        android:layout_gravity="right"
+        android:paddingLeft="16dp"
+        android:animateLayoutChanges="true"
+        android:layout_height="?android:attr/actionBarSize"
+        android:orientation="horizontal"
+        android:gravity="center_vertical|right"
+        tools:ignore="NewApi">
+
+        <TextView
+            android:id="@+id/clear_dates_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:textColor="#FFFFFF"
+            android:gravity="center_vertical"
+            android:layout_marginRight="16dp"
+            android:drawablePadding="8dp"
+            android:drawableLeft="@drawable/ic_reload_details"
+            android:text="@string/clear_dates" />
+
+        <TextView
+            android:id="@+id/cancel_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:textColor="#FFFFFF"
+            android:gravity="center_vertical"
+            android:layout_marginRight="16dp"
+            android:drawablePadding="8dp"
+            android:drawableLeft="@drawable/ic_coupon_clear"
+            android:text="@string/cancel" />
+
+        <TextView
+            android:id="@+id/search_now_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="22dp"
+            android:textColor="#FFFFFF"
+            android:gravity="center_vertical"
+            android:layout_marginRight="16dp"
+            android:drawablePadding="8dp"
+            android:drawableLeft="@drawable/abs__ic_search"
+            android:text="@string/search_now" />
+    </LinearLayout>
+
+
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/search_bar_container"
         android:background="#66000000"
@@ -78,19 +128,6 @@
                     android:layout_marginRight="16dp"
                     android:drawablePadding="8dp"
                     android:drawableLeft="@drawable/ic_traveler_white" />
-
-
-                <TextView
-                    android:id="@+id/clear_dates_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16dp"
-                    android:textColor="#FFFFFF"
-                    android:gravity="center_vertical"
-                    android:layout_marginRight="16dp"
-                    android:drawablePadding="8dp"
-                    android:drawableLeft="@drawable/ic_reload_details"
-                    android:text="@string/clear_dates" />
 
 
             </LinearLayout>
