Tablet baggage fee layout fixes
- Have baggage container fill the vertical space allotted for the details card
- Make details card bottom margin match the top (including the baggage TextView(s)

--- a/project/res/layout/fragment_tablet_flight_details.xml
+++ b/project/res/layout/fragment_tablet_flight_details.xml
@@ -38,14 +38,14 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@drawable/bg_flight_details_tablet_white_bottom"
                 android:paddingBottom="2dp">
 
                 <FrameLayout
                     android:id="@+id/baggage_fee_web_view_container"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="wrap_content" />
 
             </ScrollView>
 
