--- a/project/res/layout/include_flight_details_baggage_fees.xml
+++ b/project/res/layout/include_flight_details_baggage_fees.xml
@@ -10,7 +10,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/cd_flight_leg_baggage_fee_info"
-        android:gravity="left"
+        android:gravity="left|center_vertical"
         android:orientation="vertical">
 
         <com.expedia.bookings.widget.TextView
