--- a/project/res/drawable/ratingbar_star_hotel_details.xml
+++ b/project/res/drawable/ratingbar_star_hotel_details.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@android:id/background"
-        android:drawable="@drawable/ic_tablet_hotel_details_star_empty"/>
+        android:drawable="@android:color/transparent"/>
     <item
         android:id="@android:id/secondaryProgress"
         android:drawable="@android:color/transparent"/>
