2757. Rooms and rates detail expanded view (Part 1)
Let's help users view more details about the room but showing more description, images and what not.
This is the initial commit. A little UI polish might be needed, more comming next.

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -309,4 +309,7 @@
     <dimen name="credit_card_checkout_width">318dp</dimen>
     <dimen name="credit_card_checkout_height">219dp</dimen>
 
+    <!-- Hotel Details Rooms and rates row initial/unexpanded height -->
+    <dimen name="hotel_room_rate_list_height">57dp</dimen>
+
 </resources>
