--- a/project/res/layout/row_tablet_room_rate.xml
+++ b/project/res/layout/row_tablet_room_rate.xml
@@ -1,75 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="57dp"
-    android:orientation="horizontal"
+    android:layout_height="wrap_content"
     android:background="@drawable/bg_row"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/tablet_detail_padding"
-    android:paddingRight="@dimen/tablet_detail_padding" >
+    android:paddingRight="@dimen/tablet_detail_padding">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:orientation="vertical" >
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/text_room_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="#000000"
+                android:textSize="17sp"
+                app:textStyle="medium" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/text_bed_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#5f6061"
+                android:textSize="15sp"
+                app:textStyle="light" />
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/text_room_description"
+            android:id="@+id/text_price_per_night"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textColor="#4b566b"
-            android:textSize="15sp" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="12dp"
+            android:paddingTop="@dimen/non_refundable_tweak"
+            android:text="@string/Non_Refundable"
+            android:textSize="17sp" />
 
-        <TextView
-            android:id="@+id/text_value_adds"
+        <Button
+            android:id="@+id/room_rate_button_add_select"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#408040"
-            android:textSize="14sp" />
+            android:layout_height="32dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="5dp"
+            android:includeFontPadding="false"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:textAllCaps="true"
+            android:textColor="@android:color/white"
+            android:textSize="15sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/text_non_refundable"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/room_rate_detail_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginRight="12dp"
-        android:text="@string/Non_Refundable"
-        android:textAllCaps="true"
-        android:textColor="@color/non_refundable_text"
-        android:paddingTop="@dimen/non_refundable_tweak"
-        android:textSize="14sp"
-        android:textStyle="bold" />
-
-    <FrameLayout
-        android:id="@+id/rate_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:visibility="invisible">
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/image_checkmark"
+            android:id="@+id/room_rate_image_view"
+            android:layout_width="250dp"
+            android:layout_height="150dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:scaleType="centerCrop" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_tablet_hotel_details_blue_checkmark" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/new_room_rate"
-            android:layout_width="wrap_content"
-            android:layout_height="22dp"
-            android:background="#245fb3"
-            android:gravity="center"
-            android:textColor="#ffffff"
-            android:textSize="14sp"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:minWidth="@dimen/add_rate_button_min_width"
-            android:textStyle="bold" />
-    </FrameLayout>
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_rate_urgency_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#008c5d"
+                android:textSize="16sp"
+                app:textStyle="bold" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_rate_description_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="5"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:textStyle="light" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/room_rate_refundable_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/non_refundable"
+                android:textColor="#666666"
+                android:textSize="16sp"
+                app:textStyle="bold" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
